Update index.html, putting script into html

--- a/index.html
+++ b/index.html
@@ -1,22 +1,186 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Checklist Form</title>
-    <link rel="stylesheet" href="style.css">
+    <title>IEC 61010-1 Checklist</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 40px;
+            background-color: #f4f7f6;
+            color: #333;
+        }
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+        }
+        h2 {
+            text-align: center;
+            color: #2c3e50;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            background-color: white;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            margin-bottom: 20px;
+        }
+        th, td {
+            padding: 12px 15px;
+            border: 1px solid #dee2e6;
+        }
+        th {
+            background-color: #007bff;
+            color: white;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+        tr:nth-child(even) {
+            background-color: #f8f9fa;
+        }
+        select {
+            width: 100%;
+            padding: 8px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+        /* Стили для цветов вердикта */
+        .verdict-na { color: #666; }
+        .verdict-p { color: #28a745; }
+        .verdict-f { color: #dc3545; }
+
+        .btn-container {
+            text-align: right;
+        }
+        button {
+            padding: 10px 20px;
+            background-color: #28a745;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+        button:hover {
+            background-color: #218838;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1>My Checklist</h1>
-        <ul id="checklist">
-            <!-- Checklist items will be added here by JavaScript -->
-        </ul>
-        <form id="new-task-form">
-            <input type="text" id="new-task" placeholder="Add a new task...">
-            <button type="submit">Add</button>
-        </form>
+
+<div class="container">
+    <h2>IEC 61010-1 tests</h2>
+
+    <table id="checklistTable">
+        <thead>
+            <tr>
+                <th>Clause</th>
+                <th>Test name</th>
+                <th>Verdict</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>5.4.2</td>
+                <td>Selection of components</td>
+                <td>
+                    <select class="verdict-select" onchange="updateColor(this)">
+                        <option value="N/A" class="verdict-na">N/A</option>
+                        <option value="P" class="verdict-p">P</option>
+                        <option value="F" class="verdict-f">F</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>6.7.1</td>
+                <td>Insulation requirements</td>
+                <td>
+                    <select class="verdict-select" onchange="updateColor(this)">
+                        <option value="N/A" class="verdict-na">N/A</option>
+                        <option value="P" class="verdict-p">P</option>
+                        <option value="F" class="verdict-f">F</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>8.2.1</td>
+                <td>Enclosure rigidity test</td>
+                <td>
+                    <select class="verdict-select" onchange="updateColor(this)">
+                        <option value="N/A" class="verdict-na">N/A</option>
+                        <option value="P" class="verdict-p">P</option>
+                        <option value="F" class="verdict-f">F</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>9.3.2</td>
+                <td>Current-limiting circuit</td>
+                <td>
+                    <select class="verdict-select" onchange="updateColor(this)">
+                        <option value="N/A" class="verdict-na">N/A</option>
+                        <option value="P" class="verdict-p">P</option>
+                        <option value="F" class="verdict-f">F</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>10.1</td>
+                <td>Surface temperature limits</td>
+                <td>
+                    <select class="verdict-select" onchange="updateColor(this)">
+                        <option value="N/A" class="verdict-na">N/A</option>
+                        <option value="P" class="verdict-p">P</option>
+                        <option value="F" class="verdict-f">F</option>
+                    </select>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+    <div class="btn-container">
+        <button onclick="saveToFile()">Сохранить результат</button>
     </div>
-    <script src="script.js"></script>
+</div>
+
+<script>
+    // Функция для изменения цвета текста при выборе
+    function updateColor(selectElement) {
+        const val = selectElement.value;
+        selectElement.classList.remove('verdict-na', 'verdict-p', 'verdict-f');
+        
+        if (val === 'P') selectElement.classList.add('verdict-p');
+        else if (val === 'F') selectElement.classList.add('verdict-f');
+        else selectElement.classList.add('verdict-na');
+    }
+
+    // Функция сохранения данных
+    function saveToFile() {
+        const rows = document.querySelectorAll("#checklistTable tbody tr");
+        let content = "IEC 61010-1 TEST REPORT\n";
+        content += "==========================\n\n";
+        content += "Clause\t| Test Name\t\t| Verdict\n";
+        content += "------------------------------------------\n";
+
+        rows.forEach(row => {
+            const clause = row.cells[0].innerText;
+            const testName = row.cells[1].innerText;
+            const verdict = row.cells[2].querySelector('select').value;
+            content += `${clause}\t| ${testName}\t| ${verdict}\n`;
+        });
+
+        const blob = new Blob([content], { type: "text/plain" });
+        const link = document.createElement("a");
+        link.href = URL.createObjectURL(blob);
+        link.download = "IEC_61010_Results.txt";
+        link.click();
+        URL.revokeObjectURL(link.href);
+    }
+</script>
+
 </body>
 </html>
